fixed video poster alignment

--- a/styles/home.sass
+++ b/styles/home.sass
@@ -42,6 +42,7 @@
 
 
   video
+    background-position: bottom
     position: fixed
     top: -20%
     z-index: -1
